force-app/main/default/objects/Gestionnaire_API_Mapping__mdt/Gestionnaire_API_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Gestionnaire API Mapping</label>
    <pluralLabel>Gestionnaire API Mappings</pluralLabel>
</CustomObject>