force-app/main/default/objects/Gestionnaire_API_Mapping__mdt/fields/Actif__c.field-meta.xml
<CustomField>
    <fullName>Actif__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>