force-app/main/default/objects/Gestionnaire_API_Mapping__mdt/fields/Api_Nature__c.field-meta.xml
<CustomField>
    <fullName>Api_Nature__c</fullName>
    <description>Valeur du champ JSON &quot;nature&quot; attendue par l&apos;API (ex. VACATION_SIEGE).</description>
    <label>Code nature API</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>