force-app/main/default/objects/Gestionnaire_API_Mapping__mdt/fields/Branche__c.field-meta.xml
<CustomField>
    <fullName>Branche__c</fullName>
    <label>Branche (valeur picklist Mission)</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>