force-app/main/default/objects/Gestionnaire_API_Mapping__mdt/fields/Nature_De_Mission__c.field-meta.xml
<CustomField>
    <fullName>Nature_De_Mission__c</fullName>
    <label>Nature de mission (valeur picklist)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>