force-app/main/default/objects/Gestionnaire_API_Mapping__mdt/fields/Path_Branch_Slug__c.field-meta.xml
<CustomField>
    <fullName>Path_Branch_Slug__c</fullName>
    <description>Segment d&apos;URL après self-missionning/ (ex. sante, at).</description>
    <label>Slug branche URL</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>