force-app/main/default/objects/Gestionnaire_API_Mapping__mdt/fields/Path_Role_Slug__c.field-meta.xml
<CustomField>
    <fullName>Path_Role_Slug__c</fullName>
    <description>Segment d&apos;URL final (ex. medecin).</description>
    <label>Slug rôle URL</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>