force-app/main/default/objects/Gestionnaire_API_Mapping__mdt/fields/Type_Prestataire__c.field-meta.xml
<CustomField>
    <fullName>Type_Prestataire__c</fullName>
    <label>Type prestataire</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>